# OCR_reader

./: ocr.py  pyproject.toml
